# rofi-bookmarks

./: Cargo.toml  README.md  book.marks  bookmarks.toml
src/: main.rs
