[package]
name = "rofi-bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.2.6", features = [ "serde" ] }
open = "5.1.2"
serde = { version = "1.0.199", features = [ "derive" ] }
toml = { version = "0.8.12", features = [ "preserve_order" ] }
